[gd_scene load_steps=8 format=3 uid="uid://bwghg0mim0wi1"]

[ext_resource type="Texture2D" uid="uid://conbo2wu571yy" path="res://assets/splash.png" id="1_2ingf"]
[ext_resource type="Script" path="res://scenes/title.gd" id="1_8j82u"]
[ext_resource type="Texture2D" uid="uid://c763m6wvcdtmt" path="res://assets/title.png" id="2_8ius3"]
[ext_resource type="Theme" uid="uid://bo5ton62sllgn" path="res://game_title.theme.tres" id="3_cvn3o"]

[sub_resource type="Animation" id="Animation_x8g3o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("splash_image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4os5w"]
resource_name = "scale"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("splash_image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ei1ht"]
_data = {
"RESET": SubResource("Animation_x8g3o"),
"scale": SubResource("Animation_4os5w")
}

[node name="title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8j82u")

[node name="intro_animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../splash")
libraries = {
"": SubResource("AnimationLibrary_ei1ht")
}

[node name="splash" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="splash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.788235, 0.588235, 0.309804, 1)

[node name="splash_image" type="TextureRect" parent="splash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 144)
texture = ExtResource("1_2ingf")
expand_mode = 5
stretch_mode = 4

[node name="title_image" type="TextureRect" parent="splash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 144)
texture = ExtResource("2_8ius3")
expand_mode = 5
stretch_mode = 4

[node name="menu" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="menu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.509259
anchor_right = 1.0
anchor_bottom = 1.00093
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
metadata/_edit_use_anchors_ = true

[node name="start" type="Button" parent="menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_cvn3o")
text = "Start"

[node name="settings" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_cvn3o")
text = "Settings"

[node name="quit" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_cvn3o")
text = "Quit"

[connection signal="pressed" from="menu/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/quit" to="." method="_on_quit_pressed"]
